--- a/index.html
+++ b/index.html
@@ -1,10 +1,183 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Andrei Zărie – Portfolio</title>
+  <meta charset="utf-8">
+  <title>UX Research Portfolio – Case Studies</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Case 1</h1>
-  <p>Placeholder text</p>
+
+  <header>
+    <h1>UX Research Portfolio – Case Studies</h1>
+    <p>Research-focused case studies showing process, methods, insights, and impact.</p>
+  </header>
+
+  <main>
+
+    <!-- Case Study 1 -->
+    <article>
+      <h2>Case Study 1: Creating Inclusive Emotion Recognition Materials</h2>
+
+      <h3>Context &amp; Goal</h3>
+      <p>Develop a set of body and face emotion recognition stimuli that are representative, inclusive, and valid for both autistic and non-autistic audiences. Existing materials lacked diversity in neurotype, gender, and age, limiting ecological validity.</p>
+
+      <h3>Your Role</h3>
+      <p>Lead researcher — end-to-end project ownership, from design to validation.</p>
+
+      <h3>Methods</h3>
+      <ul>
+        <li>Stakeholder interviews with autistic community representatives and psychologists</li>
+        <li>Iterative testing with pilot groups</li>
+        <li>Filming, editing, and psychometric validation of visual stimuli</li>
+      </ul>
+
+      <h3>Process</h3>
+      <ol>
+        <li>Conducted needs assessment to identify representation gaps</li>
+        <li>Recruited 16 diverse actors (half autistic, gender-balanced, age-diverse, including non-binary identities)</li>
+        <li>Produced both static and dynamic emotion expressions</li>
+        <li>Ran multiple validation studies (~200 participants per round) with statistical analysis in R and SPSS</li>
+      </ol>
+
+      <h3>Findings &amp; Insights</h3>
+      <ul>
+        <li>Inclusion of autistic actors increased perceived relevance for neurodiverse users</li>
+        <li>Dynamic stimuli improved recognition accuracy for certain emotions</li>
+      </ul>
+
+      <h3>Impact</h3>
+      <ul>
+        <li>Open-access resource adopted by other researchers and practitioners</li>
+        <li>Secured £5k competitive funding (Impact Accelerator Fund)</li>
+      </ul>
+    </article>
+
+    <hr>
+
+    <!-- Case Study 2 -->
+    <article>
+      <h2>Case Study 2: Evaluating Educational Resources in Chaotic, Real-World Environments</h2>
+
+      <h3>Context &amp; Goal</h3>
+      <p>Assess how children and parents engaged with cognitive testing activities during <em>Summer Scientist Week</em>, a busy public science event. The challenge was to maintain usability and engagement in a high-distraction environment.</p>
+
+      <h3>Your Role</h3>
+      <p>Lead UX researcher — experimental design, field testing, and evaluation.</p>
+
+      <h3>Methods</h3>
+      <ul>
+        <li>Contextual inquiry in event space</li>
+        <li>Direct observation and behaviour logging</li>
+        <li>Post-activity surveys with parents and children</li>
+      </ul>
+
+      <h3>Process</h3>
+      <ol>
+        <li>Designed a child-friendly cognitive test with visual prompts and timed responses</li>
+        <li>Managed and trained research assistants to ensure consistent data collection</li>
+        <li>Collected and analysed data across three years to track trends</li>
+      </ol>
+
+      <h3>Findings &amp; Insights</h3>
+      <ul>
+        <li>Simplified instructions and visual cues boosted engagement in children under 8</li>
+        <li>Queue length and noise levels directly impacted performance for younger participants</li>
+      </ul>
+
+      <h3>Impact</h3>
+      <ul>
+        <li>Testing station layout redesigned based on findings</li>
+        <li>Increased completion rates and parental satisfaction year-on-year</li>
+      </ul>
+    </article>
+
+    <hr>
+
+    <!-- Case Study 3 -->
+    <article>
+      <h2>Case Study 3: Improving Survey Data Quality in Educational Settings</h2>
+
+      <h3>Context &amp; Goal</h3>
+      <p>Improve data quality and completion rates for school-administered surveys in emotion recognition research. Initial completion was low due to unclear instructions and survey fatigue.</p>
+
+      <h3>Your Role</h3>
+      <p>Lead researcher — survey design, pilot testing, and stakeholder engagement.</p>
+
+      <h3>Methods</h3>
+      <ul>
+        <li>Think-aloud usability testing with teachers</li>
+        <li>Quantitative tracking of completion and error rates</li>
+        <li>Iterative survey refinement in Qualtrics</li>
+      </ul>
+
+      <h3>Process</h3>
+      <ol>
+        <li>Identified pain points through think-aloud sessions</li>
+        <li>Reduced redundancy and restructured question flow</li>
+        <li>Added progress bars, chunked questions, and embedded micro-instructions</li>
+      </ol>
+
+      <h3>Findings &amp; Insights</h3>
+      <ul>
+        <li>Completion rates increased by 25%</li>
+        <li>Error rates dropped significantly on critical questions</li>
+      </ul>
+
+      <h3>Impact</h3>
+      <ul>
+        <li>Positive feedback from school staff on usability</li>
+        <li>Survey design became the departmental standard for related projects</li>
+      </ul>
+    </article>
+
+    <hr>
+
+    <!-- Case Study 4 -->
+    <article>
+      <h2>Case Study 4: Optimising Online Statistical Learning Resources in a Constrained Platform</h2>
+
+      <h3>Context &amp; Goal</h3>
+      <p>Enhance engagement and usability of R programming learning materials on the Maths and Stats Help (MASH) website, hosted on <strong>LibGuides</strong> — a fixed-template platform with major design constraints.</p>
+
+      <h3>Your Role</h3>
+      <p>Digital learning and UX researcher — resource development, analytics tracking, and optimisation.</p>
+
+      <h3>Methods</h3>
+      <ul>
+        <li>Web analytics review (page views, bounce rates, time-on-page)</li>
+        <li>User navigation path analysis</li>
+        <li>Content restructuring and iterative testing</li>
+      </ul>
+
+      <h3>Process</h3>
+      <ol>
+        <li>Analysed baseline metrics to identify low-engagement sections</li>
+        <li>Created new R guides with code examples, downloadable resources, and step-by-step explanations</li>
+        <li>Improved navigation and content hierarchy within LibGuides’ limitations through internal linking and clear section headings</li>
+        <li>Monitored post-launch engagement and refined content based on behaviour patterns</li>
+      </ol>
+
+      <h3>Findings &amp; Insights</h3>
+      <ul>
+        <li>Example-driven pages had higher engagement and lower bounce rates</li>
+        <li>Strategic internal linking reduced navigation dead ends</li>
+      </ul>
+
+      <h3>Impact</h3>
+      <ul>
+        <li>Increased time-on-page by over 40% for core R guide sections</li>
+        <li>R materials became one of the most visited parts of the MASH site</li>
+        <li>Provided a reusable template for other statistical learning resources</li>
+      </ul>
+
+      <p><small>Note: Work executed within LibGuides’ fixed template; no template changes were possible.</small></p>
+    </article>
+
+  </main>
+
+  <footer>
+    <p>© 2025. UX Research case studies. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
