--- a/index.html
+++ b/index.html
@@ -6,141 +6,108 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
-    /* ---------- Design tokens ---------- */
-    :root {
-      --bg: #ffffff;
-      --surface: #ffffff;
-      --text: #1a1a1a;
-      --muted: #6b7280;
-      --link: #2563eb;
-      --border: #e5e7eb;
-      --ring: rgba(37, 99, 235, 0.15);
-      --shadow: 0 10px 20px rgba(0,0,0,.06), 0 2px 6px rgba(0,0,0,.04);
+   :root {
+  --bg: #ffffff;
+  --surface: #ffffff;
+  --text: #1a1a1a;
+  --muted: #6b7280;
+  --link: #2563eb;
+  --border: #e5e7eb;
+  --ring: rgba(37, 99, 235, 0.15);
+  --shadow: 0 6px 14px rgba(0,0,0,.05), 0 1px 3px rgba(0,0,0,.04);
 
-      --radius: 16px;
-      --maxw: 980px;
-      --space-1: .5rem;
-      --space-2: .75rem;
-      --space-3: 1rem;
-      --space-4: 1.5rem;
-      --space-5: 2rem;
-      --space-6: 3rem;
+  --radius: 14px;
+  --maxw: 1100px;
+  --space-1: .4rem;
+  --space-2: .6rem;
+  --space-3: .85rem;
+  --space-4: 1.2rem;
+  --space-5: 1.6rem;
+  --space-6: 2rem;
 
-      --h1: clamp(1.8rem, 2.6vw, 2.4rem);
-      --h2: clamp(1.35rem, 1.8vw, 1.6rem);
-      --h3: clamp(1.05rem, 1.2vw, 1.15rem);
-      --text-size: clamp(1rem, 1.1vw, 1.05rem);
-    }
+  --h1: clamp(1.5rem, 2vw, 2rem);
+  --h2: clamp(1.15rem, 1.5vw, 1.35rem);
+  --h3: clamp(.95rem, 1.1vw, 1.05rem);
+  --text-size: clamp(.9rem, 1vw, .95rem);
+}
 
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --bg: #0b0e14;
-        --surface: #0f131b;
-        --text: #e5e7eb;
-        --muted: #9aa4b2;
-        --link: #60a5fa;
-        --border: #1f2937;
-        --ring: rgba(96, 165, 250, 0.22);
-        --shadow: 0 10px 24px rgba(0,0,0,.45), 0 2px 6px rgba(0,0,0,.3);
-      }
-    }
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg: #0b0e14;
+    --surface: #0f131b;
+    --text: #e5e7eb;
+    --muted: #9aa4b2;
+    --link: #60a5fa;
+    --border: #1f2937;
+    --ring: rgba(96, 165, 250, 0.22);
+    --shadow: 0 8px 18px rgba(0,0,0,.35), 0 1px 4px rgba(0,0,0,.25);
+  }
+}
 
-    /* ---------- Base ---------- */
-    html, body {
-      padding: 0;
-      margin: 0;
-      background: radial-gradient(1200px 800px at 80% -10%, rgba(37,99,235,0.08), transparent 60%),
-                  radial-gradient(900px 700px at -10% 20%, rgba(16,185,129,0.07), transparent 60%),
-                  var(--bg);
-      color: var(--text);
-      font: 400 var(--text-size)/1.6 ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
-            Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      text-rendering: optimizeLegibility;
-    }
+html, body {
+  padding: 0;
+  margin: 0;
+  background: var(--bg);
+  color: var(--text);
+  font: 400 var(--text-size)/1.5 ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, "Helvetica Neue", Arial;
+  -webkit-font-smoothing: antialiased;
+}
 
-    a { color: var(--link); text-decoration: none; }
-    a:hover { text-decoration: underline; }
+a { color: var(--link); text-decoration: none; }
+a:hover { text-decoration: underline; }
 
-    /* ---------- Layout ---------- */
-    .wrap { max-width: var(--maxw); margin: 0 auto; padding: 0 var(--space-3); }
+.wrap { max-width: var(--maxw); margin: 0 auto; padding: 0 var(--space-3); }
 
-    header.site {
-      padding: var(--space-6) 0 var(--space-4);
-    }
-    .badge {
-      display: inline-flex; align-items: center; gap: .5ch;
-      padding: .2rem .55rem; border-radius: 999px; font-size: .85rem;
-      color: var(--muted); border: 1px solid var(--border); background: rgba(0,0,0,.02);
-    }
+header.site { padding: var(--space-5) 0 var(--space-3); }
+.badge {
+  display: inline-flex; align-items: center; gap: .4ch;
+  padding: .15rem .45rem; border-radius: 999px; font-size: .8rem;
+  color: var(--muted); border: 1px solid var(--border);
+}
 
-    h1 { font-size: var(--h1); line-height: 1.2; margin: var(--space-2) 0 var(--space-2); letter-spacing: -.02em; }
-    .lead { color: var(--muted); max-width: 70ch; }
+h1 { font-size: var(--h1); margin: var(--space-1) 0 var(--space-2); }
+.lead { color: var(--muted); max-width: 70ch; font-size: .95rem; }
 
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: var(--space-4);
-    }
-    @media (min-width: 860px) {
-      .grid { grid-template-columns: 1fr 1fr; }
-    }
+.grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: var(--space-3);
+}
+@media (min-width: 800px) {
+  .grid { grid-template-columns: repeat(2, 1fr); }
+}
 
-    /* ---------- Card ---------- */
-    .card {
-      background: linear-gradient(180deg, rgba(255,255,255,.6), rgba(255,255,255,.5)) no-repeat;
-      background: var(--surface);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: var(--space-4);
-      transition: transform .18s ease, box-shadow .18s ease, border-color .18s ease;
-    }
-    .card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 14px 30px rgba(0,0,0,.09), 0 3px 10px rgba(0,0,0,.05);
-      border-color: color-mix(in srgb, var(--border), var(--link) 30%);
-    }
+.card {
+  background: var(--surface);
+  border: 1px solid var(--border);
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+  padding: var(--space-3);
+  transition: transform .18s ease, box-shadow .18s ease;
+}
+.card:hover { transform: translateY(-1px); }
 
-    article h2 {
-      margin: 0 0 var(--space-2);
-      font-size: var(--h2);
-      line-height: 1.25;
-      letter-spacing: -.01em;
-    }
+article h2 { margin: 0 0 var(--space-1); font-size: var(--h2); }
+article h3 {
+  margin: var(--space-2) 0 var(--space-1);
+  font-size: var(--h3);
+  color: var(--muted);
+  text-transform: uppercase;
+  letter-spacing: .05em;
+}
 
-    article h3 {
-      margin: var(--space-3) 0 var(--space-1);
-      font-size: var(--h3);
-      color: var(--muted);
-      text-transform: uppercase;
-      letter-spacing: .06em;
-    }
+ul, ol { padding-left: 1rem; margin: .2rem 0 .5rem; }
+li + li { margin-top: .25rem; }
 
-    ul, ol { padding-left: 1.1rem; margin: .25rem 0 .75rem; }
-    li + li { margin-top: .35rem; }
+footer.site {
+  margin-top: var(--space-5);
+  padding: var(--space-4) 0;
+  color: var(--muted);
+  border-top: 1px solid var(--border);
+  text-align: center;
+}
 
-    .meta {
-      display: flex; flex-wrap: wrap; gap: .5rem 1rem; margin-bottom: .75rem;
-      color: var(--muted); font-size: .95rem;
-    }
-
-    /* ---------- Footer ---------- */
-    footer.site {
-      margin-top: var(--space-6);
-      padding: var(--space-5) 0 var(--space-6);
-      color: var(--muted);
-      border-top: 1px solid var(--border);
-      text-align: center;
-    }
-
-    /* ---------- Focus styles for a11y ---------- */
-    :where(a, button, summary, .card):focus-visible {
-      outline: 3px solid var(--ring);
-      outline-offset: 2px;
-      border-radius: calc(var(--radius) - 2px);
-    }
 
     /* ---------- Print ---------- */
     @media print {
