--- a/index.html
+++ b/index.html
@@ -1,14 +1,140 @@
-<p>
-  <a href="portfolio.html">View my UX Research Portfolio</a>
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Andrei Zărie – UX Research Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <style>
+    /* Shared theme with portfolio */
+    :root {
+      --bg: #ffffff;
+      --surface: #ffffff;
+      --text: #1a1a1a;
+      --muted: #6b7280;
+      --link: #2563eb;
+      --border: #e5e7eb;
+      --ring: rgba(37, 99, 235, 0.15);
+      --shadow: 0 6px 14px rgba(0,0,0,.05), 0 1px 3px rgba(0,0,0,.04);
 
-<a href="portfolio.html" style="
-  display:inline-block;
-  padding:0.6rem 1rem;
-  background:#2563eb;
-  color:white;
-  text-decoration:none;
-  border-radius:6px;">
-  View Portfolio
-</a>
+      --radius: 14px;
+      --maxw: 1100px;
+      --space-1: .4rem;
+      --space-2: .6rem;
+      --space-3: .85rem;
+      --space-4: 1.2rem;
+      --space-5: 1.6rem;
+      --space-6: 2rem;
+
+      --h1: clamp(1.5rem, 2vw, 2rem);
+      --h2: clamp(1.15rem, 1.5vw, 1.35rem);
+      --text-size: clamp(.9rem, 1vw, .95rem);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg: #0b0e14;
+        --surface: #0f131b;
+        --text: #e5e7eb;
+        --muted: #9aa4b2;
+        --link: #60a5fa;
+        --border: #1f2937;
+        --ring: rgba(96, 165, 250, 0.22);
+        --shadow: 0 8px 18px rgba(0,0,0,.35), 0 1px 4px rgba(0,0,0,.25);
+      }
+    }
+
+    html, body {
+      padding: 0;
+      margin: 0;
+      background: var(--bg);
+      color: var(--text);
+      font: 400 var(--text-size)/1.5 ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
+            Roboto, "Helvetica Neue", Arial;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    a { color: var(--link); text-decoration: none; }
+    a:hover { text-decoration: underline; }
+
+    .wrap {
+      max-width: var(--maxw);
+      margin: 0 auto;
+      padding: 0 var(--space-3);
+    }
+
+    header.site {
+      padding: var(--space-6) 0 var(--space-4);
+      text-align: center;
+    }
+    .badge {
+      display: inline-flex;
+      align-items: center;
+      gap: .4ch;
+      padding: .15rem .45rem;
+      border-radius: 999px;
+      font-size: .8rem;
+      color: var(--muted);
+      border: 1px solid var(--border);
+    }
+    h1 {
+      font-size: var(--h1);
+      margin: var(--space-2) 0;
+    }
+    .lead {
+      color: var(--muted);
+      max-width: 60ch;
+      margin: 0 auto;
+    }
+
+    /* Button style to match theme */
+    .btn {
+      display: inline-block;
+      padding: .65rem 1.2rem;
+      margin-top: var(--space-4);
+      background: var(--link);
+      color: white;
+      border-radius: var(--radius);
+      font-weight: 500;
+      text-decoration: none;
+      box-shadow: var(--shadow);
+      transition: background .2s ease, transform .15s ease;
+    }
+    .btn:hover {
+      background: #1e4ed8;
+      transform: translateY(-1px);
+    }
+    .btn:focus-visible {
+      outline: 3px solid var(--ring);
+      outline-offset: 2px;
+    }
+
+    footer.site {
+      margin-top: var(--space-6);
+      padding: var(--space-4) 0;
+      color: var(--muted);
+      border-top: 1px solid var(--border);
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+
+  <header class="site wrap">
+    <span class="badge">UX Research Portfolio</span>
+    <h1>Andrei Zărie</h1>
+    <p class="lead">
+      Researcher and statistics specialist with expertise in user research, quantitative and qualitative methods,
+      and digital resource development.
+    </p>
+    <a href="portfolio.html" class="btn">View Portfolio</a>
+  </header>
+
+  <footer class="site">
+    <div class="wrap">
+      © 2025 • Andrei Zărie
+    </div>
+  </footer>
+
+</body>
+</html>
