Update UX research portofolio.html

--- a/UX research portofolio.html
+++ b/UX research portofolio.html
@@ -132,7 +132,7 @@ footer.site {
 
   <main class="wrap">
     <section class="grid">
-
+<span class="badge">UX Research Portfolio</span>
       <!-- Case Study 1 -->
       <article class="card">
         <h2>Creating Inclusive Emotion Recognition Materials</h2>
