--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Andrei Zărie – UX Research Portfolio</title>
+  <title>Andrei Zărie</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -67,15 +67,7 @@
       padding: var(--space-6) 0 var(--space-4);
       text-align: center;
     }
-    .badge {
-      display: inline-flex;
-      align-items: center;
-      gap: .4ch;
-      padding: .15rem .45rem;
-      border-radius: 999px;
-      font-size: .8rem;
-      color: var(--muted);
-      border: 1px solid var(--border);
+    
     }
     h1 {
       font-size: var(--h1);
@@ -121,7 +113,7 @@
 <body>
 
   <header class="site wrap">
-    <span class="badge">UX Research Portfolio</span>
+  
     <h1>Andrei Zărie</h1>
     <p class="lead">
       Researcher and statistics specialist with expertise in user research, quantitative and qualitative methods,
