--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       Researcher and statistics specialist with expertise in user research, quantitative and qualitative methods,
       and digital resource development.
     </p>
-    <a href="portfolio.html" class="btn">View Portfolio</a>
+    <a href="UX research portofolio.html" class="btn">View Portfolio</a>
   </header>
 
   <footer class="site">
