--- a/index.html
+++ b/index.html
@@ -50,4 +50,87 @@
       color: var(--text);
       font: 400 var(--text-size)/1.5 ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
             Roboto, "Helvetica Neue", Arial;
-      -webkit-font-sm
+      -webkit-font-smoothing: antialiased;
+    }
+
+    a { color: var(--link); text-decoration: none; }
+    a:hover { text-decoration: underline; }
+
+    .wrap {
+      max-width: var(--maxw);
+      margin: 0 auto;
+      padding: 0 var(--space-3);
+    }
+
+    header.site {
+      padding: var(--space-6) 0 var(--space-4);
+      text-align: center;
+    }
+
+    h1 {
+      font-size: var(--h1);
+      margin: var(--space-2) 0;
+    }
+
+    .lead {
+      color: var(--muted);
+      max-width: 60ch;
+      margin: 0 auto;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: .65rem 1.2rem;
+      margin: var(--space-2);
+      background: var(--link);
+      color: white;
+      border-radius: var(--radius);
+      font-weight: 500;
+      text-decoration: none;
+      box-shadow: var(--shadow);
+      transition: background .2s ease, transform .15s ease;
+    }
+
+    .btn:hover {
+      background: #1e4ed8;
+      transform: translateY(-1px);
+    }
+
+    .btn:focus-visible {
+      outline: 3px solid var(--ring);
+      outline-offset: 2px;
+    }
+
+    footer.site {
+      margin-top: var(--space-6);
+      padding: var(--space-4) 0;
+      color: var(--muted);
+      border-top: 1px solid var(--border);
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+
+  <header class="site wrap">
+    <h1>Andrei Zărie</h1>
+    <p class="lead">
+      Researcher and statistics specialist with expertise in user research, quantitative and qualitative methods,
+      and digital resource development.
+    </p>
+
+    <!-- Buttons -->
+    <a href="CV.html" class="btn">CV</a>
+    <a href="UX research portfolio.html" class="btn">UX Portfolio</a>
+    <a href="written-work.html" class="btn">Written Work</a>
+    <a href="video-work.html" class="btn">Video Work</a>
+  </header>
+
+  <footer class="site">
+    <div class="wrap">
+      © 2025 • Andrei Zărie
+    </div>
+  </footer>
+
+</body>
+</html>
