--- a/written-work.html
+++ b/written-work.html
@@ -45,9 +45,9 @@
     <p>A comparative investigation of face and body emotion recognition in autism and neurotypical populations.</p>
 
     <!-- Embedded PDF -->
-    <iframe src="PhD-thesis-Andrei-Zarie.pdf"></iframe>
+    <iframe src="PhD thesis - manuscript.pdf"></iframe>
 
-    <p><a href="PhD-thesis-Andrei-Zarie.pdf" class="btn" download>Download Full Thesis (PDF)</a></p>
+    <p><a href="PhD thesis - manuscript.pdf"" class="btn" download>Download Full Thesis (PDF)</a></p>
   </div>
 </body>
 </html>
