--- a/written-work.html
+++ b/written-work.html
@@ -4,50 +4,105 @@
   <meta charset="utf-8">
   <title>Written Work – Andrei Zărie</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
-    body {
-      font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+    :root {
+      --bg: #ffffff;
+      --text: #1a1a1a;
+      --muted: #6b7280;
+      --link: #2563eb;
+      --radius: 14px;
+      --shadow: 0 6px 14px rgba(0,0,0,.05), 0 1px 3px rgba(0,0,0,.04);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg: #0b0e14;
+        --text: #e5e7eb;
+        --muted: #9aa4b2;
+        --link: #60a5fa;
+        --shadow: 0 8px 18px rgba(0,0,0,.35), 0 1px 4px rgba(0,0,0,.25);
+      }
+    }
+
+    html, body {
       margin: 0;
-      background: #f9fafb;
-      color: #1a1a1a;
+      background: var(--bg);
+      color: var(--text);
+      font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      -webkit-font-smoothing: antialiased;
       text-align: center;
     }
+
     .wrap {
       max-width: 900px;
       margin: 2rem auto;
       padding: 1rem;
     }
+
+    h1 {
+      font-size: clamp(1.6rem, 2vw, 2.2rem);
+      margin-bottom: 0.5rem;
+    }
+
+    p.lead {
+      color: var(--muted);
+      margin-bottom: 1.5rem;
+    }
+
     iframe {
       width: 100%;
       height: 90vh;
       border: none;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      border-radius: 10px;
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
     }
+
     a.btn {
       display: inline-block;
-      padding: 0.6rem 1.2rem;
-      background: #2563eb;
-      color: #fff;
-      border-radius: 10px;
-      text-decoration: none;
+      padding: 0.65rem 1.2rem;
+      background: var(--link);
+      color: white;
+      border-radius: var(--radius);
       font-weight: 500;
-      margin-top: 1rem;
+      text-decoration: none;
+      box-shadow: var(--shadow);
+      margin: 1rem 0.4rem;
+      transition: background .2s ease, transform .15s ease;
     }
+
     a.btn:hover {
       background: #1e4ed8;
+      transform: translateY(-1px);
+    }
+
+    footer {
+      margin-top: 2rem;
+      color: var(--muted);
+      font-size: 0.9rem;
     }
   </style>
 </head>
+
 <body>
   <div class="wrap">
+
     <h1>PhD Thesis</h1>
-    <p>A comparative investigation of face and body emotion recognition in autism and neurotypical populations.</p>
+    <p class="lead">A comparative investigation of face and body emotion recognition in autism and neurotypical populations.</p>
 
     <!-- Embedded PDF -->
     <iframe src="PhD thesis - manuscript.pdf"></iframe>
 
-    <p><a href="PhD thesis - manuscript.pdf"" class="btn" download>Download Full Thesis (PDF)</a></p>
+    <!-- Buttons -->
+    <div>
+      <a href="PhD thesis - manuscript.pdf" class="btn" download>Download Full Thesis (PDF)</a>
+      <a href="index.html" class="btn">Back to Home</a>
+    </div>
+
+    <footer>
+      © 2025 • Andrei Zărie
+    </footer>
+
   </div>
 </body>
 </html>
