--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <a href="CV.html" class="btn">CV</a>
     <a href="UX research portfolio.html" class="btn">UX Portfolio</a>
     <a href="written-work.html" class="btn">Written Work</a>
-    <a href="video-work.html" class="btn">Video Work</a>
+    <a href="https://ipstore.lincoln.ac.uk/product/fable" class="btn">Video Work</a>
   </header>
 
   <footer class="site">
